# jarvis_core

./: .env.example  .gitignore  =3.9.0  CORE_INTEGRATION_TASK.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  runbook.md
src/: app.py  gateway_client.py  jarvis_core.py  middleware.py  router.py  safety.py
src/ai/: __init__.py  client.py  schemas.py  service.py
src/application/chat/: schemas.py  service.py
src/application/deepthink/: __init__.py  action_executor.py  schemas.py  service.py  web_search.py
src/core/config/: __init__.py  engine.py  gaurd.py  prompt_loader.py  swagger.py
src/core/db/: db.py  db_connection.py  db_schema.py
src/core/db/db_operations/: __init__.py  chat_summary.py  messages.py  model_config.py  model_selection.py  persona_memory.py  sessions.py  user.py  user_settings.py
tests/: conftest.py  test_ai_client_streaming.py  test_app.py  test_engine.py
